samples/_failures_safe/1761170872_8e63b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57f377ac.c: In function ‘main’:
./samples/SAFE/__tmp_57f377ac.c:159:16: error: missing terminating " character
  159 |         printf("Round-trip successful!\
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_57f377ac.c:159:9: error: expected expression at end of input
  159 |         printf("Round-trip successful!\
      |         ^~~~~~
./samples/SAFE/__tmp_57f377ac.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57f377ac.c:159:9: error: expected declaration or statement at end of input
